# test-docker-poetry

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
test_docker_poetry/: main.py
